fixes issues with xoverflow on firefox

--- a/public/style.css
+++ b/public/style.css
@@ -35,11 +35,15 @@ body {
   height: 100vh;
   padding: 0;
   margin: 0;
+  
 }
 .main {
   background-color: var(--bg-main);
-  height: 100%;
   color: var(--light-font-color);
+  height: 100%;
+  width: 100vw;
+  /* height: 100vh; */
+  margin-bottom: 2rem;
 }
 .display {
   border-radius: 20px;
@@ -47,20 +51,6 @@ body {
   padding: 10px;
   box-shadow: 0 0 12px 6px rgba(0,0,0,0.05);
   border-radius: 0.5rem;
-}
-.main {
-  width: 100vw;
-  height: 100vh;
-  margin-bottom: 2rem;
-  display: grid;
-  grid-template-columns: auto 1fr 1fr;
-  grid-template-rows: auto auto 1fr; 
-  grid-gap: 20px;
-  grid-template-areas: 
-  "search search search"
-  "title current current"
-  "forecast forecast forecast"
-  ;
 }
 
 /* ----- SEARCH AREA ----- */
@@ -102,6 +92,23 @@ body {
 #clear-search {
   margin-left: 20px;
   height: fit-content;
+}
+
+.weather {
+  height: fit-content;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: auto 1fr 1fr;
+  grid-template-rows: auto auto 1fr; 
+  grid-gap: 20px;
+  grid-template-areas: 
+  "search search search"
+  "title current current"
+  "forecast forecast forecast"
+  ;
+  max-width: 1300px;
+  margin: auto;
+  background-color: var(--bg-main);
 }
 
 /* ----- CURRENT WEATHER TITLE DISPLAY ----- */
@@ -185,6 +192,8 @@ body {
   margin: 0 6rem auto 6rem;
   background-color: var(--bg-color);
   color: var(--text);
+  overflow-x: clip;
+  height: fit-content;
 }
 .input-group {
   max-width: 500px;
@@ -223,8 +232,8 @@ body {
 }
 
 @media (max-width: 1100px) {
-  .main {
-    height: 100vh;
+  .main .weather {
+    height: fit-content;
   }
   .container-search {
     align-content: center;
@@ -242,12 +251,12 @@ body {
 }
 
 @media (max-width: 970px) {
-  .main {
+  .weather {
     display: flex;
     flex-direction: column;
-    height: auto;
     padding-top: 0;
     padding-bottom: 1rem;
+
   }
   .container-title {
     grid-area: title;
